Closed Bug 1674834 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::layers::CanvasEventRingBuffer::WaitForReadCount | mozilla::layers::CanvasEventRingBuffer::WaitForCheckpoint | mozilla::layers::CanvasChild::GetDataSurface]

Categories

(Core :: Graphics: Canvas2D, defect, P1)

All
Windows
defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox82 --- wontfix
firefox83 --- wontfix
firefox84 --- fixed

People

(Reporter: bobowen, Assigned: bobowen)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

I think these are all down to the recorder not initialising properly, probably due an issue with the GPU process or communication to it.

The recorder exists, but not its read/write footers and these all fail trying to wait for the first checkpoint, which gets set to 0.

Crash report: https://crash-stats.mozilla.org/report/index/f24c39e6-b91c-4f16-9a8e-d0ef20201029

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0 xul.dll mozilla::layers::CanvasEventRingBuffer::WaitForReadCount gfx/layers/CanvasDrawEventRecorder.cpp:380
1 xul.dll mozilla::layers::CanvasEventRingBuffer::WaitForCheckpoint gfx/layers/CanvasDrawEventRecorder.cpp:346
2 xul.dll mozilla::layers::CanvasChild::GetDataSurface gfx/layers/ipc/CanvasChild.cpp:289
3 xul.dll mozilla::layers::SourceSurfaceCanvasRecording::EnsureDataSurfaceOnMainThread gfx/layers/ipc/CanvasChild.cpp:81
4 xul.dll mozilla::layers::SourceSurfaceCanvasRecording::GetDataSurface gfx/layers/ipc/CanvasChild.cpp:70
5 xul.dll mozilla::gfx::DrawEventRecorderPrivate::StoreSourceSurfaceRecording gfx/2d/DrawEventRecorder.cpp:27
6 xul.dll mozilla::gfx::EnsureSurfaceStoredRecording gfx/2d/DrawTargetRecording.cpp:47
7 xul.dll mozilla::gfx::DrawTargetRecording::CopySurface gfx/2d/DrawTargetRecording.cpp:409
8 xul.dll mozilla::layers::PersistentBufferProviderShared::BorrowDrawTarget gfx/layers/PersistentBufferProvider.cpp:377
9 xul.dll mozilla::dom::CanvasRenderingContext2D::EnsureTarget dom/canvas/CanvasRenderingContext2D.cpp:1260
Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/autoland/rev/68e1453c7629 Check that 2D Canvas recorder has initialized. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: