Bug 1674834: Check that 2D Canvas recorder has initialized. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D95566